fixed spacing in user profile page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,10 +76,10 @@ nav {
 
 .column{
   display: inline-block;
-  width: 25%;
+  width: 30%;
   vertical-align: top;
-  margin-right: 80px;
-  margin-left: 25px;
+  margin-right: 30px;
+  margin-left: 0px;
 }
 #submitbutton {
   background-color: #D94185;
